Changed user relationships and game state names.
